# lengua

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaksignore  CHANGELOG.md  CLAUDE.md  Makefile  PROOF_SECRET_DELETEME.txt  README.md  app.py  architecture.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt
.claude/: settings.json
.github/: pull_request_template.md
apps/: README.md
apps/api/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  openapi.json  pyproject.toml
apps/api/app/: __init__.py  _proof_uncovered.py  auth.py  config.py  deletion_tokens.py  deps.py  discover_cache.py  error_tracking.py  feature_flags.py  llm_observability.py  llm_runner.py  mailer.py  main.py  observability.py  product_metrics.py  prompt_store.py  quota.py  ratelimit.py  request_context.py  security_headers.py  settings.py  testing.py
apps/api/app/db/: __init__.py  base.py  migration_url.py  models.py  rls.py  session.py
apps/api/app/repositories/: __init__.py  cards.py  languages.py  proficiency.py  profiles.py  reviews.py  settings.py  usage.py
apps/api/app/routers/: __init__.py  account.py  account_deletion.py  cards.py  discover.py  experimental.py  explain.py  feature_flags.py  generate.py  languages.py  me.py  proficiency.py  review.py  settings.py
apps/api/app/schemas/: __init__.py  account.py  cards.py  discover.py  explain.py  feature_flags.py  generate.py  languages.py  me.py  proficiency.py  review.py  settings.py
apps/api/app/services/: __init__.py  account.py  discover.py  errors.py  explain.py  generate.py  languages.py  me.py  proficiency.py  review.py  settings.py
apps/api/legacy_streamlit/: __init__.py  app.py  db.py  languages.py  settings.py  store.py  ui.py
apps/api/legacy_streamlit/pages/: 1_Generate.py  2_Review.py  3_Discover.py  4_Settings.py
apps/api/lengua_core/: __init__.py  cards.py  config.py  gemini.py  models.py  proficiency.py  prompts.py  scheduler.py
apps/api/lengua_core/llm/: __init__.py  base.py  fake.py  gemini.py  groq.py  keys.py  provider.py  retry.py  usage.py
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 20260625_0001_initial_schema.py  20260626_0002_profiles_bootstrap_trigger.py  20260626_0003_rls_policies.py  20260626_0004_llm_killswitch.py  20260628_0005_feature_flags.py  20260630_0006_profiles_auth_users_fk.py  20260709_0007_prompt_versions.py
apps/api/scripts/: __init__.py  dump_openapi.py  import_sqlite.py  legacy_smoke.py  seed_dev_user.py  seed_e2e.py  staging_smoke.py  verify.py
apps/api/tests/: auth_helpers.py  conftest.py  factories.py  rls_helpers.py  seed.py  supabase_auth.py  test_account_authz.py  test_account_delete.py  test_account_deletion_public.py  test_account_export.py  test_auth_config.py  test_cascade.py  test_config.py  test_cors.py  test_cross_tenant_app.py  test_db_fixture.py  test_demo_seed.py  test_deps.py  test_factories.py  test_fake_llm.py  test_feature_flags.py  test_health.py  test_health_ready.py  test_import_sqlite.py  test_imports.py  test_jwt.py  test_jwt_rejection.py  test_me.py  test_no_guest.py  test_openapi_stable.py  test_profiles_bootstrap.py  test_prompt_store.py  test_repositories_scoping.py  test_rls.py  test_rls_coverage.py  test_rls_session.py  test_routes_auth.py  test_security_headers.py  test_seed.py  test_settings.py  (+3 more)
apps/api/tests/api/: conftest.py  test_cards_save.py  test_deps.py  test_discover.py  test_discover_reuse.py  test_explain.py  test_explain_cache.py  test_full_loop.py  test_generate.py  test_generate_limits.py  test_health.py  test_languages.py  test_proficiency.py  test_quota_endpoints.py  test_review.py  test_settings.py
apps/api/tests/db/: alembic_helpers.py  test_feature_flags_privileges.py  test_migration_url.py  test_models_metadata.py  test_prompt_versions_privileges.py  test_rls_migration.py  test_role_privileges.py  test_schema_roundtrip.py  test_seed_dev_user.py  test_session.py  test_usage_tables.py
apps/api/tests/integration/: __init__.py  test_global_killswitch.py  test_load_cost_guard.py
apps/api/tests/lengua_core/: test_cards.py  test_proficiency.py  test_prompts.py  test_scheduler.py
apps/api/tests/llm/: fakes.py  test_backoff.py  test_gemini_provider.py  test_get_provider.py  test_groq_discover_explain.py  test_groq_generate.py  test_key_resolution.py  test_provider_switch.py  test_retry.py  test_transient_errors.py  test_usage.py
apps/api/tests/obs/: conftest.py  test_alerts.py  test_cost_metrics.py  test_dashboards.py  test_llm_metrics.py  test_llm_span.py  test_llm_spans.py  test_log_correlation.py  test_logging.py  test_otel_db_spans.py  test_otel_httpx_spans.py  test_otel_resource.py  test_otel_wiring.py  test_product_metrics.py  test_quota_span.py  test_red_metrics.py  test_review_span.py  test_run_provider_obs.py  test_sentry.py  test_trace_continuation.py
apps/api/tests/quota/: conftest.py  test_abuse_guard.py  test_budget.py  test_caps.py  test_concurrency.py  test_discover_cache.py  test_eligibility.py  test_gate_order.py  test_ratelimit.py
apps/api/tests/repositories/: test_cards_repo.py  test_languages_repo.py  test_reviews_repo.py  test_settings_repo.py  test_usage_repo.py
apps/api/tests/services/: test_discover_filter.py  test_discover_service.py  test_explain_service.py  test_generate_service.py  test_languages_service.py  test_proficiency_service.py  test_review_limits.py  test_review_service.py  test_settings_bounds.py  test_settings_service.py
docs/: README.md  byok-seam.md  privacy-policy.md  runbook.md  store-listing.md  streamlit-parity.md
infra/: README.md  branch-protection.md
lengua/: config.py  db.py  flashcards.py  gemini.py  languages.py  models.py  proficiency.py  prompts.py  scheduler.py  settings.py  ui.py
pages/: 1_Generate.py  2_Review.py  3_Discover.py  4_Settings.py
planning/: 00-overview.md  01-architecture.md  02-roadmap.md  03-backend.md  04-frontend-mobile.md  05-infra-deploy.md  06-observability.md  07-security-compliance.md  08-open-questions-and-costs.md  09-testing-quality.md  README.md  (+11 more)
(+302 files in other folders)
