[project]
name = "lengua-api"
version = "0.1.0"
description = "Lengua API — FastAPI backend service"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # FSRS spaced-repetition algorithm — used by the pure lengua_core.scheduler the API's
    # review service builds on (and by the legacy Streamlit store).
    "fsrs>=5.0",
    # LLM provider SDKs behind the lengua_core.llm seam (selected by LLM_PROVIDER):
    # groq = the OpenAI-compatible default for all dev/CI; google-genai = Gemini (prod).
    "groq>=1.5.0",
    "google-genai>=2.10.0",
    # Async persistence layer (Phase 1.3): SQLAlchemy 2.x ORM + the asyncpg driver. The
    # [asyncio] extra pulls in greenlet, which the async engine needs. SQL lives only in app/
    # (repositories); lengua_core stays DB-agnostic.
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    # Alembic owns the schema (Phase 1.4): migrations/ targets app.db.Base.metadata. Lives
    # outside the ruff/mypy/coverage gate (migrations/ is excluded below + not in mypy files).
    "alembic>=1.14",
    # Observability (Phase 1.7): OpenTelemetry SDK + auto-instrumentation for FastAPI,
    # SQLAlchemy, and httpx, wired in app/main.py (app/observability.py). The OTLP exporter is
    # only attached when OTEL_EXPORTER_OTLP_ENDPOINT is set, so local/CI runs stay no-op (no
    # network). These are PROD deps (not dev) so the shipped Docker image is instrumented too.
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp>=1.30",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.51b0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "pyjwt[crypto]>=2.10",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-socket>=0.7",
    "pytest-asyncio>=0.24",
    "psycopg[binary]>=3.2",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.uv]
package = false

# ── Ruff (lint + format), scoped to app/ + tests/ only ────────────────────────
[tool.ruff]
# Pre-existing packages (lengua_core, legacy_streamlit) are out of scope for this
# gate — only the FastAPI shell is linted/formatted/type-checked here. `migrations/` is
# Alembic-managed (templated env.py + autogenerated revisions) and likewise out of the gate.
extend-exclude = ["lengua_core", "legacy_streamlit", "data", "migrations"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query()/... in argument defaults is the framework idiom (the call is
# resolved per-request by FastAPI), not the mutable-default bug B008 guards against.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
]

# ── Mypy (strict-ish), scoped to app/ + tests/ only ───────────────────────────
[tool.mypy]
python_version = "3.12"
files = ["app", "tests"]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
# lengua_core / legacy_streamlit are pre-existing and untyped — not part of this gate.
exclude = '(^|/)(lengua_core|legacy_streamlit|data)/'

[[tool.mypy.overrides]]
module = ["lengua_core.*", "legacy_streamlit.*"]
ignore_missing_imports = true
follow_imports = "skip"

# FSRS ships no type stubs; the pure-core tests import fsrs.Rating directly.
[[tool.mypy.overrides]]
module = ["fsrs", "fsrs.*"]
ignore_missing_imports = true

# OpenTelemetry (Phase 1.7): the SDK is typed but several instrumentation packages ship no stubs.
# Targeted ignore_missing_imports + follow_imports=skip for the otel namespace only (NOT a blanket
# strict-off) so app/observability.py + the obs tests stay in the mypy --strict gate.
[[tool.mypy.overrides]]
module = ["opentelemetry.*"]
ignore_missing_imports = true
follow_imports = "skip"

# ── Pytest + coverage ─────────────────────────────────────────────────────────
# Coverage is scoped to the FastAPI shell (`app`), the provider-agnostic LLM seam
# (`lengua_core.llm`, added in 0.4.2), and the pure domain modules ported in Phase 1.1
# (`scheduler`, `proficiency`, `cards`, `config`). The legacy SQLite modules
# (`lengua_core` gemini + everything under `legacy_streamlit`) are pre-existing/legacy and
# intentionally OUT of this gate (see the ruff/mypy scoping note above), so they are not
# measured here.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov=lengua_core/llm --cov=lengua_core.scheduler --cov=lengua_core.proficiency --cov=lengua_core.cards --cov=lengua_core.config --cov-branch --cov-fail-under=80 --cov-report=term-missing"
# Explicit (non-auto) asyncio mode: async tests/fixtures are opt-in via the asyncio marker /
# pytest_asyncio.fixture, so the sync suite is unaffected. One event loop per test function.
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that require a live Postgres (Supabase CLI). Auto-skipped when DATABASE_URL is unreachable.",
]

[tool.coverage.run]
source = [
    "app",
    "lengua_core/llm",
    "lengua_core.scheduler",
    "lengua_core.proficiency",
    "lengua_core.cards",
    "lengua_core.config",
]
branch = true
# The async API handlers are driven over ASGI and call async SQLAlchemy, whose async->sync bridge
# runs in greenlets; without this, coverage misses lines resumed after an ``await`` in the
# top-level endpoint coroutines (they execute — proven by the HTTP tests — but go unrecorded).
concurrency = ["thread", "greenlet"]
omit = [
    "app/settings.py",  # settings boilerplate — values come from env, not logic
    "tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "def __repr__",
]
