[project]
name = "lengua-api"
version = "0.0.0"
description = "Lengua FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "testcontainers[postgres]>=4.14.2",
    "sqlalchemy>=2.0.51",
    "psycopg[binary]>=3.3.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
files = ["app", "lengua_core", "tests"]

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov=lengua_core --cov-branch --cov-fail-under=80 --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app", "lengua_core"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
